fixed viewport misalignment

--- a/wp-content/plugins/raffleleader/assets/css/preview_default_style.css
+++ b/wp-content/plugins/raffleleader/assets/css/preview_default_style.css
@@ -1,6 +1,6 @@
 .preview-wrapper{
-    width: 150vw;
-    height: 200vw;
+    width: 150%;
+    height: 200%;
     position: fixed;
     z-index: 1;
     background-color: rgb(233, 233, 233);
@@ -9,12 +9,16 @@
 
 .preview-box{
     position: absolute;
-    top: 16.5%;
-    left: 42%;
+    top: 35%;
+    left: 43%;
     min-height: 80vh;
     width: 55vh;
     background-color: white;
     border: 2px solid black;
     border-radius: 10px;
     overflow: auto;
+}
+
+.selected-section{
+    border: 2px solid black;
 }
